data/derived/comb/progs/unify/prog1615.ml.out
Characters 28-57:
  let fixpoint (f,b) = wwhile (fun xx -> (xx, (f xx) = xx)),b;;
                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
('a -> 'a * bool) * 'a
